htdocs/theme/raw/sass/components/_indicator.scss
.move-indicator {
    @extend .text-muted;
    font-size: $font-size-base * 0.75;
    vertical-align: middle;
    margin-left: -$spacing-sm;
    opacity: 0.7;

    a:hover &,
    .card-header:hover & {
        opacity: 1;
    }
    .card-secondary & {
        float: left;
        margin: $card-spacer-y $spacing-sm;
        font-size: $font-size-base;
    }
}

//dash
.collapse-indicator {
    color: $collapse-indicator-color;
    font-size: $font-size-sm;
    display: block;
    transition-duration: 0.3s;
    line-height: $headings-line-height;
    margin-top: $spacing-sm;
    &.text-small {
        font-size: $font-size-sm;
    }
    .collapsed & {
        color: $collapse-indicator-color;
    }
    // advanced options collapsible
    .link-expand-right & {
        margin-top: 0;
        padding-left: $spacing-sm;
        padding-right: $spacing-sm;
    }
    a:hover &,
    a:focus & {
        color: $collapse-indicator-hover-color;
    }
    .collapsed ~ & {
        transform: rotate(180deg);
        transition-duration: 0.3s;
    }
    &.block-config-modal {
        margin-left: $spacing-sm;
    }
}

tr[data-toggle="collapse"],
a[data-toggle="collapse"],
button[data-toggle="collapse"] {
    &:hover {
      outline: none;
    }
    &:focus {
      outline: medium solid $input-focus-border-color;
    }
    &:hover .collapse-indicator,
    &:focus .collapse-indicator{
        color: $collapse-indicator-hover-color;
    }
    .collapse-indicator {
        transform: rotate(-180deg);
        transition-duration: 0.3s;
        color: $collapse-indicator-color;
        height: auto;
    }
    &.collapsed .collapse-indicator {
        transform: rotate(0deg);
        transition-duration: 0.3s;
    }
}

// need to be float right for blog post list
.taggedposts,
.recentblogpost {
  a[data-toggle="collapse"] {
    display: inline-block;
    float: right;
  }
  // but not the attachments
  .has-attachment a[data-toggle="collapse"] {
    display: block;
    float: none;
  }
}

.expand-indicator {
    @extend .text-muted;
    font-size: $font-size-sm;
    padding-right: $spacing-sm;
    margin-top: 0;
    + .icon {
        color: $collapse-indicator-color;
        &:hover,
        &:focus {
            color: $collapse-indicator-hover-color;
        }
    }
}

// syntax change if link is an outer-link
[data-toggle="collapse"].outer-link {
    &.collapsed {
        ~ .collapse-indicator {
            color: $collapse-indicator-color;
        }
    }
    &:hover,
    &:focus {
        ~ .collapse-indicator {
            color: $collapse-indicator-hover-color;
        }
    }
}

// Align text and chevron across multiple layouts
.collapse-inline {
    display: inline-block;
    width: 90%;
}

.columns5 .collapse-inline {
    width: 80%;
}

@include media-breakpoint-up(md) {
    .columns3.col-width-15 .collapse-inline {
        width: 70%;
    }
}

// Align in edit mode
.editing {
    .icon-chevron-down {
        padding-right: $spacing-sm;
    }
    .columns1,
    .columns2,
    .columns3,
    .columns4,
    .columns5 {
        .collapse-inline {
            width: 65%;
        }
    }
    @include media-breakpoint-up(md) {
        .columns1 .collapse-inline {
            width: 85%;
        }
        .columns2.col-width-33,
        .columns3.col-width-33 {
            .collapse-inline {
                width: 50%;
            }
        }
    }
    @include media-breakpoint-up(lg) {
        .columns4.col-width-25,
        .columns3.col-width-25 {
            .collapse-inline {
                width: 50%;
            }
        }
    }
    @include media-breakpoint-up(xl) {
        .columns3.col-width-25 {
            width: 60%;
        }
        .columns1,
        .columns2.col-width-33,
        .columns3.col-width-33,
        .columns4 {
            .collapse-inline {
                width: 70%;
            }
        }
        .columns5 {
            .collapse-inline {
                width: 50%;
            }
        }
    }
}

.secreturls .list-group-item,
.iframesources .buttonscell {
    .collapse-indicator.open .icon-chevron-down {
        transform: rotate(-180deg);
        transition-duration: 0.3s;
    }
    .collapse-indicator.closed .icon-chevron-down {
        transform: rotate(0deg);
        transition-duration: 0.3s;
    }
}

